Fix paragraph margins that seem too big.

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ a:active { color: #aa0; }
 h1 { font: 450%/1 BlackoutMidnight, "Helvetica Neue", Helvetica, Arial, "Liberation Sans", FreeSans, sans-serif; }
 h1 a:link, h1 a:visited { color: #000; text-decoration: none }
 ul { list-style-type: none; }
-p { margin: 1em 0; }
+p { margin: 0; }
 #page-header { padding: 20px; text-align: center }
 section { padding: 20px; }
 section header { padding: 0 33px; font: 100%/1 BlackoutMidnight, "Helvetica Neue", Helvetica, Arial, "Liberation Sans", FreeSans, sans-serif; }
